--- a/templates/base.html
+++ b/templates/base.html
@@ -171,5 +171,7 @@
     <!-- <script src="{% static 'js/2ibca.js' %}"></script> --> <!-- Comentado se não existir ou não for necessário -->
     <script src="{% static 'js/mobile-menu.js' %}"></script>
 
+    {% block extra_js %}{% endblock %}
+
 </body>
 </html>
